--- a/article/index.html
+++ b/article/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../components/sidebar/sidebar.css">
     <link rel="icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -19,7 +18,8 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/akar-icons-fonts"></script>
     <link rel="stylesheet" href="./article.css">
-    <title>Nexus Studium</title>
+    <link rel="stylesheet" href="../components/sidebar/sidebar.css">
+    <title>Artigos</title>
 </head>
 
 <body>
