--- a/comunity/index.html
+++ b/comunity/index.html
@@ -24,11 +24,11 @@
 <body>
   <aside class="sidebar ocult-sidebar">
     <header class="flex">
-        <img src="../../img/logomarca-png.png" width="150px" height="150px" />
+        <img src="../img/logomarca-png.png" width="150px" height="150px" />
     </header>
     <ul>
         <li>
-            <a href="../../login-page/index.html"><button type="button" onclick="onClick(this)">
+            <a href="../login-page/index.html"><button type="button" onclick="onClick(this)">
                     <i class="ai-home-alt1"></i>
                     <p>Início</p>
                 </button></a>
@@ -42,17 +42,17 @@
             <div class="sub-menu">
                 <ul>
                     <li>
-                        <a href="../../user/historic/index.html">
+                        <a href="../user/historic/index.html">
                             <button type="button">Histórico</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../user/who-follow/index.html">
+                        <a href="../user/who-follow/index.html">
                             <button type="button">Quem eu sigo</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../user/favorite-roads/index.html">
+                        <a href="../user/favorite-roads/index.html">
                             <button type="button">Trilhas favoritas</button>
                         </a>
                     </li>
@@ -61,7 +61,7 @@
         </li>
 
         <li> <!-- ============= MARCOS =============== -->
-            <a href="../../doug/article/article.html">
+            <a href="../doug/article/article.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-book-open"></i>
                     <p>Artigos</p>
@@ -69,7 +69,7 @@
             </a>
         </li>
         <li>
-            <a href="../../doug/exercises/exercises.html">
+            <a href="../doug/exercises/exercises.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-folder-add"></i>
                     <p>Exercícios</p>
@@ -77,7 +77,7 @@
             </a>
         </li>
         <li>
-            <a href="../../doug/comunity/comunity.html">
+            <a href="../doug/comunity/comunity.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-people-group"></i>
                     <p>Comunidade</p>
@@ -85,7 +85,7 @@
             </a>
         </li>
         <li>
-            <a href="../../user/historic/index.html">
+            <a href="../user/historic/index.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-statistic-up"></i>
                     <p>Progresso</p>
@@ -102,22 +102,22 @@
             <div class="sub-menu">
                 <ul>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Perguntas Frequentes</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Sobre</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Feedback</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Suporte</button>
                         </a>
                     </li>
@@ -131,7 +131,7 @@
             </button>
         </li>
         <li>
-            <a href="../../user-settings/user-information/index.html">
+            <a href="../user-settings/user-information/index.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-gear"></i>
                     <p>Configurações</p>
