--- a/exercises/index.html
+++ b/exercises/index.html
@@ -25,11 +25,11 @@
 <body>
   <aside class="sidebar ocult-sidebar">
     <header class="flex">
-        <img src="../../img/logomarca-png.png" width="150px" height="150px" />
+        <img src="../img/logomarca-png.png" width="150px" height="150px" />
     </header>
     <ul>
         <li>
-            <a href="../../login-page/index.html"><button type="button" onclick="onClick(this)">
+            <a href="../login-page/index.html"><button type="button" onclick="onClick(this)">
                     <i class="ai-home-alt1"></i>
                     <p>Início</p>
                 </button></a>
@@ -43,17 +43,17 @@
             <div class="sub-menu">
                 <ul>
                     <li>
-                        <a href="../../user/historic/index.html">
+                        <a href="../user/historic/index.html">
                             <button type="button">Histórico</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../user/who-follow/index.html">
+                        <a href="../user/who-follow/index.html">
                             <button type="button">Quem eu sigo</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../user/favorite-roads/index.html">
+                        <a href="../user/favorite-roads/index.html">
                             <button type="button">Trilhas favoritas</button>
                         </a>
                     </li>
@@ -61,8 +61,8 @@
             </div>
         </li>
 
-        <li>
-            <a href="../../doug/article/article.html">
+        <li> <!-- ============= MARCOS =============== -->
+            <a href="../doug/article/article.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-book-open"></i>
                     <p>Artigos</p>
@@ -70,7 +70,7 @@
             </a>
         </li>
         <li>
-            <a href="../../doug/exercises/exercises.html">
+            <a href="../doug/exercises/exercises.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-folder-add"></i>
                     <p>Exercícios</p>
@@ -78,7 +78,7 @@
             </a>
         </li>
         <li>
-            <a href="../../doug/comunity/comunity.html">
+            <a href="../doug/comunity/comunity.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-people-group"></i>
                     <p>Comunidade</p>
@@ -86,7 +86,7 @@
             </a>
         </li>
         <li>
-            <a href="../../user/historic/index.html">
+            <a href="../user/historic/index.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-statistic-up"></i>
                     <p>Progresso</p>
@@ -103,22 +103,22 @@
             <div class="sub-menu">
                 <ul>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Perguntas Frequentes</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Sobre</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Feedback</button>
                         </a>
                     </li>
                     <li>
-                        <a href="../../doug/help/help-page.html">
+                        <a href="../doug/help/help-page.html">
                             <button type="button">Suporte</button>
                         </a>
                     </li>
@@ -132,7 +132,7 @@
             </button>
         </li>
         <li>
-            <a href="../../user-settings/user-information/index.html">
+            <a href="../user-settings/user-information/index.html">
                 <button type="button" onclick="onClick(this)">
                     <i class="ai-gear"></i>
                     <p>Configurações</p>
